easystogu/scheduled/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-scheduled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easystogu-scheduled
  template:
    metadata:
      labels:
        app: easystogu-scheduled
    spec:
      containers:
      - name: easystogu-scheduled
        image: eyaweiw.cn:5000/easystogu-scheduled:2.0.0-snapshot 
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
