easystogu/scheduled/istio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-scheduled-v2
  labels:
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easystogu-scheduled
      version: v2
  template:
    metadata:
      labels:
        app: easystogu-scheduled
        version: v2
    spec:
      containers:
      - name: easystogu-scheduled
        image: eyaweiw.cn:5000/easystogu-scheduled:2.0.0-snapshot 
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
