easystogu/scheduled/service-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: easystogu-scheduled-loadbalancer
  labels:
    app: easystogu-scheduled
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.56.190
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
      protocol: TCP
  selector:
    app: easystogu-scheduled
  externalTrafficPolicy: Local
