easystogu/scheduled/istio-gateway.yaml
##easystogu Gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: easystogu-scheduled-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
