easystogu/scheduled/istio-destinationRule.yaml
##easystogu DestinationRule
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: easystogu-scheduled
spec:
  host: easystogu-scheduled
  subsets:
  - name: v2
    labels:
      version: v2
