easystogu/scheduled/istio-virtualService.yaml
##easystogu VirtualService
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: easystogu-scheduled
spec:
  hosts:
  - "*"
  gateways:
  - my-ingress-istio-gateway
  http:
  - match:
    - uri:
        exact: /scheduled
    route:
    - destination:
        host: easystogu-scheduled
        port:
          number: 8080
